@@ -1,4 +1,4 @@
-$Id: THANKS,v 1.44 2001/04/10 12:46:53 stelian Exp $
+$Id: THANKS,v 1.45 2001/05/26 11:11:16 stelian Exp $
 
 Dump and restore were written by the people of the CSRG at the University
 of California, Berkeley.
@@ -37,6 +37,7 @@ Jason Fearon		jasonf@netrider.org.au
 Jeremy Fitzhardinge	jeremy@goop.org
 Eirik Fuller		eirik@netcom.com
 Uwe Gohlke		uwe@ugsoft.de
+Ian Gordon		iangordon@users.sourceforge.net
 Andreas Hasenack	andreas@conectiva.com.br
 Christian Haul		haul@informatik.tu-darmstadt.de
 Jean-Paul van der Jagt	jeanpaul@dutepp0.et.tudelft.nl
